--- a/styles.css
+++ b/styles.css
@@ -450,7 +450,7 @@ ul {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    background: #000;
+    background: #fff;
     /* Preencher áreas vazias se a proporção for diferente */
     transition: transform 0.6s;
 }
